2002-07-12  Jody Goldberg <jody@gnome.org>

	* src/plugin-service.c (gnum_plugin_file_opener_probe) : remove
	  pretend feature that supported regexp.  Only shell paterns are
	  supported now.
	(plugin_service_file_opener_read) : ditto.

	* src/io-context.c (file_io_progress_set) : delete.
	(file_io_progress_update) : ditto.
	(memory_io_progress_set) : ditto.
	(memory_io_progress_update) : ditto.

	* src/gnumeric-gconf.c (gnm_gconf_get_horizontal_dpi) : dummy out for
	  now until we add a cache.
	(gnm_gconf_get_vertical_dpi) : ditto.

2002-07-10  Jody Goldberg <jody@gnome.org>

	* src/stf.c (stf_preparse) : stf_parse_convert_to_unix now returns the
	  length.
	* src/stf.c (stf_read_default_probe) : handle short files.

2002-07-10  Jody Goldberg <jody@gnome.org>

	* src/gui-clipboard.c (x_clipboard_to_cell_region) :
	  stf_parse_is_valid_data now takes a length.
	* src/stf.c (stf_read_default_probe) : ditto.
	(stf_preparse) : ditto.
	* src/stf-parse.c (stf_parse_is_valid_data) : Use the supplied buffer
	  length, not a 0 terminator.

2002-07-10  Jody Goldberg <jody@gnome.org>

	* configure.in : enable quatro pro plugin
	* plugins/Makefile.am : ditto

2002-07-11  Morten Welinder  <terra@diku.dk>

	* src/search.c (calculate_replacement): Initial work towards UTF-8
	safety.
	(search_replace_compile, search_replace_verify): Make UTF-8 safe,
	except for the fact that our regexp routines are not.

2002-07-10  Jon K Hellan  <hellan@acm.org>

	* src/workbook-control-component.c (cb_help_about): Remove
	debugging output.
	(workbook_control_component_activate): Plug leak.

2002-07-10  Morten Welinder  <terra@diku.dk>

	* src/search.c (search_replace_string): Use glib 2's
	g_string_append_len.
	(calculate_replacement): Ditto.
	(cb_order_sheet_col_row, cb_order_sheet_row_col): Make UTF-8 safe.

2002-07-09  Morten Welinder  <terra@diku.dk>

	* src/mathfunc.c (random_poisson): Fix loop (by switching method).

2002-07-09  Jody Goldberg <jody@gnome.org>
